# maze-generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  simple.frag  simple.vert  tex.frag  tex.vert  vcpkg.json
assets/shaders/: simple.frag  simple.vert
shaders/: simple.vert
src/: Cell.cpp  Cell.hpp  Errors.hpp  Game.cpp  Game.hpp  Grid.cpp  Grid.hpp  ImageBuffer.hpp  Logging.hpp  Pixel.hpp  Point.hpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Window.cpp  Window.hpp  main.cpp  old_main.cpp
src/Core/: Game.cpp  Game.hpp
src/Pz/Core/: Game.cpp  Game.hpp  Keyboard.cpp  Keyboard.hpp  Logging.cpp  Logging.hpp
src/Pz/Mesh/: Mesh.cpp  Mesh.hpp  MeshBuilder.cpp  MeshBuilder.hpp
src/Pz/Shader/: Program.cpp  Program.hpp
src/Pz/UI/: Window.hpp
src/UI/: Window.cpp  Window.hpp
